--- a/03-CSS/vacunacion.html
+++ b/03-CSS/vacunacion.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Education</a></li>
                     <li><a href="#">News</a></li>
                     <li><a href="#">Regulation</a></li>
-                    <li><a href="#">Hoax Buster</a></li>
+                    <li><a class="btn-azul" href="#">Hoax Buster</a></li>
                 </ul>
             </navbar>
         </header>
@@ -34,6 +34,18 @@
             <div class="contenido-izq">
                 <h1>Fight Virus With Vaccines</h1>
                 <p>Let's stop this pandemic by killing the virus with a vaccine, don't let yourself and your family get infected</p>
+
+                <div class="parrafo">
+                    <img class="logo-tarjeta" src="./img/escudo.png"> 
+                    <h4>Best Protection</h4>
+                </div>
+
+                <div class="parrafo">
+                    <img class="logo-tarjeta" src="./img/estrella.png"> 
+                    <h4>Sellected Vaccines</h4>
+                </div>
+
+
             </div>
             
             <img class="img-der" src="./img/enfermera.jpg">
@@ -126,6 +138,41 @@
             </div>
 
             <img class="img-izq" src="./img/mask.jpg">
+        </section>
+
+        <section>
+            <div class="contenido-izq">
+                <h2>Emergency Contact</h2>
+                <p>Contact one of the contacts below if you or you or your family feel unwell and have similar symptoms such as COVID-19, make sure you also take care of yourself before reporting to us:</p>
+
+                <!-- Contenedor de tarjetas de contacto -->
+                <div class="contenedor-vacunas">
+                    <div class="tarjeta">
+                        <img class="logo-tarjeta" src="./img/call.png">
+                        <p><b>Call</b> <br> 021.123.145.14</p>
+                        <button type="button">Call Now</button>
+                    </div>
+                    <div class="tarjeta">
+                        <img class="logo-tarjeta" src="./img/chat.png">
+                        <p><b>Chat</b> <br> 021.123.145.14</p>
+                        <button class="btn-azul" type="button">Chat Now</button>
+                    </div>
+                </div>
+                <div class="contenedor-vacunas">
+                    <div class="tarjeta">
+                        <img class="logo-tarjeta" src="./img/video.png">
+                        <p><b>Video Call</b> <br> 021.123.145.14</p>
+                        <button type="button">Video Call Now</button>
+                    </div>
+                    <div class="tarjeta">
+                        <img class="logo-tarjeta" src="./img/mensaje.png">
+                        <p><b>Message</b> <br> 021.123.145.14</p>
+                        <button type="button">Message Now</button>
+                    </div>
+                </div>
+            </div>
+
+            <img class="img-der" src="./img/doctor.jpg">
         </section>
 
         <footer>
