Despliegue de tipos

--- a/04-JS/pokedex.html
+++ b/04-JS/pokedex.html
@@ -44,8 +44,10 @@
 
         <section class="tapa">
             <div class="pantalla-info" id="pantalla-info">
-                <h3>Tipo: </h3>
-                
+                <h3 class="tipo-head">Tipo: </h3>
+                <div class="contenedor-tipo" id="contenedor-tipo"></div>
+
+                <div class="contenedor-stats" id="contenedor-stats"></div>
             </div>
         </section>
 
