Despliegue de movimientos del pokemon

--- a/04-JS/pokedex.html
+++ b/04-JS/pokedex.html
@@ -68,6 +68,11 @@
                     
                 </div>
             </div>
+
+            <!-- Contenedor de movimientos -->
+            <div class="pantalla-info" id="pantalla-mov">
+
+            </div>
         </section>
 
         <script src="./JS/pokedex.js" type="text/javascript"></script>
